--- a/src/main/resources/templates/rooms.html
+++ b/src/main/resources/templates/rooms.html
@@ -27,4 +27,15 @@
             <td th:text="${room.roomId}"></td>
             <td th:text="${room.roomNumber}"></td>
             <td th:text="${room.roomType}"></td>
-        </tr> </table></div>
+            <td th:text="${room.capacity}"></td>
+            <td th:text="${room.occupancy}"></td>
+            <td th:text="${room.hostelBlock}"></td>
+            <td th:text="${room.status}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
