--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -135,6 +135,9 @@
                 <a href="/hostel/waitlist" class="btn btn-outline-warning btn-lg">
                     <i class="bi bi-list-ol"></i> View Waitlist
                 </a>
+                <a href="/admin/login" class="btn btn-outline-dark btn-lg">
+                    <i class="bi bi-shield-lock"></i> Admin Portal
+                </a>
             </div>
         </div>
     </div>
